--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Six Year Old Work Simulator</title>
 		<link rel="stylesheet" href="style.css"/>
 	</head>
+	<h1>KIDDY WORD GENERATOR</h1>
 	<body ng-app ="ourModule" ng-controller="ourController">
 		<div id="container">
 			<button ng-click="addWord()">Word</button>
